SUBDIRS = stage

configdir = $(prefix)/share/player/config

config_DATA = usc_pioneer.cfg \
							umass_reb.cfg \
							umass_ATRVJr.cfg \
							umass_ATRVMini.cfg \
							PHE-05cm.pnm.gz \
							vfh.cfg \
							gazebo.cfg \
							segwayrmp.cfg\
							gazebo_blobfinder.cfg\
							colors.txt \
							wavefront.cfg \
							shapeTracker.cfg

EXTRA_DIST = usc_pioneer.cfg \
						 umass_reb.cfg \
						 umass_ATRVJr.cfg \
						 umass_ATRVMini.cfg \
						 PHE-05cm.pnm.gz \
						 vfh.cfg \
						 gazebo.cfg \
						 segwayrmp.cfg\
						 gazebo_blobfinder.cfg\
						 colors.txt \
						 wavefront.cfg \
						 shapeTracker.cfg
