SUBDIRS =

configdir = $(prefix)/share/player/config

config_DATA = \
amigobot.cfg \
amigobot_tcp.cfg \
b21r_rflex_lms200.cfg \
dummy.cfg \
erratic.cfg \
gazebo.cfg \
iwspy.cfg \
joystick.cfg \
magellan.cfg \
mapfile.cfg \
nomad.cfg \
obot.cfg \
pioneer.cfg \
pointcloud3d.cfg \
readlog.cfg \
rfid.cfg \
roomba.cfg \
segwayrmp.cfg \
service_adv.cfg \
simple.cfg \
sphere.cfg \
umass_ATRVJr.cfg \
umass_ATRVMini.cfg \
umass_reb.cfg \
urglaser.cfg \
vfh.cfg \
wavefront.cfg \
wbr914.cfg \
writelog.cfg \
wsn.cfg

EXTRA_DIST = \
amigobot.cfg \
amigobot_tcp.cfg \
b21r_rflex_lms200.cfg \
dummy.cfg \
erratic.cfg \
gazebo.cfg \
iwspy.cfg \
joystick.cfg \
magellan.cfg \
mapfile.cfg \
nomad.cfg \
obot.cfg \
pioneer.cfg \
pointcloud3d.cfg \
readlog.cfg \
rfid.cfg \
roomba.cfg \
segwayrmp.cfg \
service_adv.cfg \
simple.cfg \
sphere.cfg \
umass_ATRVJr.cfg \
umass_ATRVMini.cfg \
umass_reb.cfg \
urglaser.cfg \
vfh.cfg \
wavefront.cfg \
wbr914.cfg \
writelog.cfg \
wsn.cfg
