configdir = $(prefix)/share/player/config

EXAMPLES = \
amigobot.cfg \
amigobot_tcp.cfg \
b21r_rflex_lms200.cfg \
dummy.cfg \
erratic.cfg \
gazebo.cfg \
iwspy.cfg \
joystick.cfg \
magellan.cfg \
mapfile.cfg \
nomad.cfg \
obot.cfg \
pioneer.cfg \
pointcloud3d.cfg \
readlog.cfg \
rfid.cfg \
roomba.cfg \
segwayrmp.cfg \
service_adv.cfg \
simple.cfg \
sphere.cfg \
umass_ATRVJr.cfg \
umass_ATRVMini.cfg \
umass_reb.cfg \
urglaser.cfg \
vfh.cfg \
wavefront.cfg \
wbr914.cfg \
writelog.cfg \
wsn.cfg

config_DATA = $(EXAMPLES)

EXTRA_DIST = $(EXAMPLES)
