MESSAGE (STATUS "===== Examples =====")
OPTION (BUILD_EXAMPLES "Build the libplayerc, libplayerc++ and plugin examples" ON)

IF (BUILD_EXAMPLES)
    IF (NOT PLAYER_OS_WIN)
        ADD_SUBDIRECTORY (plugins)
        ADD_SUBDIRECTORY (libplayerc)
        ADD_SUBDIRECTORY (libplayerc++)
    ENDIF (NOT PLAYER_OS_WIN)
ENDIF (BUILD_EXAMPLES)
MESSAGE (STATUS "====================")
MESSAGE (STATUS "")
